# roblox-engine-api-docs-mcp

./: .env.example  .gitignore  Dockerfile  Dockerfile.ingestion  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_publish.yml
.roo/rules/: implementation-guidelines.md
app/: logging_config.py  main.py  models.py  retriever.py
build-and-publish/: CRON_SETUP.md  Dockerfile  Dockerfile.ingestion  Dockerfile.runner  README.md  cron-wrapper-docker.sh  cron-wrapper.sh  go  ingest-locally  run-ingestion.sh
knowledge-database/: README.md
llm-notes/: TODO.md  plan.md
mcp_server/: main.py
project-planning/: README.md  technical-specs.md
project-planning/background/: Roblox-Client-Tracker_README.md  creator-docs_README.md  mcp-python-sdk_README.md  open-source-dependencies-research.md
project-planning/mcp-extension/: README.md  technical-plans.md
scraper/: chunking.py  main.py  roblox_api.py  vector_db.py
scraper/spiders/: creator_hub_spider.py
src/ingestion/: Dockerfile  README.md  chunking.py  main.py  parsing.py  sources.py
src/mcp_server/: Dockerfile  Dockerfile.local  README.md  main.py  mcp_server.py  state.py
src/roblox_api_rag/: main.py
src/roblox_api_rag/api/: endpoints.py  models.py
src/roblox_api_rag/ingestion/: main.py  parsing.py
src/roblox_api_rag/mcp/: server.py
src/scripts/: get_roblox_version.py
