[tool.poetry]
name = "roblox-api-rag"
version = "0.1.0"
description = "Roblox API RAG Agent Knowledge Base"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
qdrant-client = "^1.9.0"
llama-index = "*"
llama-index-vector-stores-qdrant = "*"
llama-index-embeddings-fastembed = "*"
apscheduler = "^3.11.0"
scrapy = "^2.11.2"
pydantic = "^2.7.4"
httpx = "^0.28.1"
crochet = "^2.1.1"
beautifulsoup4 = "^4.12.3"
llama-index-llms-openai = "^0.1.5"
llama-index-postprocessor-colbert-rerank = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"