[tool.poetry]
name = "roblox-engine-api-docs-mcp"
version = "0.1.0"
description = "This project provides a Retrieval-Augmented Generation (RAG) API for the Roblox engine, packaged as a convenient Docker image and exposed via MCP."
authors = ["Roo"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
qdrant-client = {extras = ["fastembed"], version = "^1.8.2"}
langchain = "^0.1.16"
langchain-community = "^0.0.34"
sentence-transformers = "^2.7.0"
unstructured = {extras = ["md"], version = "^0.13.2"}
httpx = "^0.27.0"
langchain-core = "^0.1.45"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
mcp = "*" # Allow any version for now to resolve dependency

[tool.poetry.group.versioning.dependencies]
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"